fix features alignment

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -172,16 +172,18 @@ $topbar-break: 520px;
  */
 .features {
   background-color: white;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .features-title {
   text-align: center;
+  margin: 10px auto;
 }
 .features-item {
-  width: 33%;
+  width: 32%;
   float: left;
-  margin: 10px auto 20px;
+  margin: 10px 0 20px 0;
+  padding: 10px;
 
   &:nth-of-type(3) {
     &:after {
